# hard-sync-cli

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: app.rs  libs.rs  main.rs
src/app/: commands.rs  start.rs
src/controllers/: dir_tracker.rs  file_tracker.rs  mod.rs  tracker_config.rs
src/helpers/: logger.rs
src/libs/: helpers.rs  logger.rs
src/modules/: transaction.rs
src/tests/: mod.rs
src/tests/integration/: mod.rs  transaction.rs
src/tests/unit/: helpers.rs  mod.rs
