[package]
name = "hard-sync-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.1"
fli = "0.0.4"
log = "0.4.20"
sysinfo = "0.29.11"
walkdir = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
